<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_request"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top|center"
    android:orientation="vertical">

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|top"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_request_ad_unit_id"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingLeft="@dimen/padding_linear_layout"
        android:paddingRight="@dimen/padding_linear_layout"
        android:paddingTop="15dp"
        android:text="@string/series_label" />

    <EditText
        android:id="@+id/series"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/padding_linear_layout"
        android:layout_marginRight="@dimen/padding_linear_layout"
        android:inputType="number"
        android:maxLength="4" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/padding_linear_layout"
        android:layout_marginRight="@dimen/padding_linear_layout"
        android:text="@string/number_label" />

    <EditText
        android:id="@+id/number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/padding_linear_layout"
        android:layout_marginRight="@dimen/padding_linear_layout"
        android:inputType="number"
        android:maxLength="6" />

    <Button
        android:id="@+id/request_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginLeft="@dimen/padding_linear_layout"
        android:layout_marginRight="@dimen/padding_linear_layout"
        android:layout_marginTop="@dimen/menu_btn_margin_top"
        android:background="@drawable/button_next"
        android:paddingTop="10dp"
        android:text="@string/btn_check"
        android:textColor="@color/manu_text"
        android:textSize="@dimen/menu_text" />

    <Button
        android:id="@+id/btnClear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginLeft="@dimen/padding_linear_layout"
        android:layout_marginRight="@dimen/padding_linear_layout"
        android:layout_marginTop="@dimen/menu_btn_margin_top"
        android:background="@drawable/button_clear"
        android:text="@string/clear"
        android:textColor="@color/manu_text"
        android:textSize="@dimen/menu_text" />

</LinearLayout>
